<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">Operator Plugin APK</string>
    <string name="wifi_tether_configure_ssid_default_for_cmcc">MTK Athens15</string>
    <string name="exceed_subject_length_limitation">Reached max length</string>
    <string name="select_text">Select text</string>
    <string name="changeview">Change Mode</string>
    <string name="menu_sim_sms" >"SIM SMS"</string>
    <string name="multi_files">Multi-files</string>
    <string name="download_failed_due_to_full_memory">Download message failed due to memory full.</string>
    <string name="homepage_base_site_navigation" translatable="false">
        content://com.android.browser.site_navigation/websites</string>
    <string-array name="predefined_websites_op01">
        <item>about:blank</item>
        <item>about:blank1</item>
        <item>sitenavigation_thumbnail_default</item>
        
        <item>about:blank</item>
        <item>about:blank2</item>
        <item>sitenavigation_thumbnail_default</item>
        
        <item>about:blank</item>
        <item>about:blank3</item>
        <item>sitenavigation_thumbnail_default</item>
        
        <item>about:blank</item>
        <item>about:blank4</item>
        <item>sitenavigation_thumbnail_default</item>

        <item>about:blank</item>
        <item>about:blank5</item>
        <item>sitenavigation_thumbnail_default</item>

        <item>about:blank</item>
        <item>about:blank6</item>
        <item>sitenavigation_thumbnail_default</item>

        <item>about:blank</item>
        <item>about:blank7</item>
        <item>sitenavigation_thumbnail_default</item>
        
        <item>about:blank</item>
        <item>about:blank8</item>
        <item>sitenavigation_thumbnail_default</item>
        
        <item>about:blank</item>
        <item>about:blank9</item>
        <item>sitenavigation_thumbnail_default</item>
    </string-array>
    <string-array name="bookmarks_for_op01" translatable="false">
        <item>MM综合门户</item>
        <item>http://mm.10086.cn/a/j/2743/</item>
        <item>手机阅读</item>
        <item>http://wap.cmread.com</item>
        <item>手机游戏</item>
        <item>http://g.10086.cn</item>
        <item>手机视频</item>
        <item>http://wap.cmvideo.cn</item>
        <item>无线音乐</item>
        <item>http://m.10086.cn</item>
        <item>12580</item>
        <item>http://12580wap.10086.cn/?pid=PCM002942000</item>
        <item>飞信首页</item>
        <item>http://f.10086.cn</item>
        <item>139邮箱</item>
        <item>http://mail.10086.cn</item>
        <item>冲浪网址</item>
        <item>http://go.10086.cn/?coc=6GG2GGRq</item>
    </string-array>
    <string name="add_new_bookmark">Add bookmark</string>
    <string name="new_folder">New folder</string>
    <string name="clear_history">Clear history</string>
    <string name="notification_download_complete">Download complete.</string>
    <string name="notification_download_complete_op01">File is saved to: </string>
    <string name="loop">"Loop"</string>
    <string name="next">"Next"</string>
    <string name="previous">"Previous"</string>
    <string name="stop">"Stop"</string>
    <string name="single_track">"Single track"</string>
    <string name="bookmark_add">"Add bookmark"</string>
    <string name="bookmark_display">"Show bookmarks"</string>
    <string name="media_detail">"Media details"</string>
    <string name="input_url">"Input URL"</string>
    <string name="streaming_settings">"Streaming Settings"</string>
    <string name="stereo">"Stereo"</string>
    <string name="single">"Single"</string>
    <string name="wifi_security_cmcc">Security</string>
    <string name="proxy_exclusionlist_label_cmcc">Bypass proxy for</string>
    <string name="wifi_priority_label">Priority</string>
    <string name="status_unavailable">Unavailable</string>
    <string name="wifi_gateway">Gateway</string>
    <string name="wifi_network_netmask">Netmask</string>
    <string name="wifi_connect_ap_title">Network auto connect</string>
    <string name="wifi_connect_ap_summary">Connect to the recently used AP automatically when Wi-Fi enabled</string>
    <string name="wifi_connect_type_title">Set network connection method</string>
    <string name="wifi_signal_found_msg">Current connection signal is weak, would you like to use another WLAN network?</string>
    <string name="wifi_priority_type_title">Set AP priority manually</string>
    <string name="wifi_priority_type_summary">Allow to set priority for each access point manually</string>
    <string name="wifi_priority_settings_title">AP priority settings</string>
    <string name="wifi_priority_settings_summary">Click to set priority of each access point</string>
    <string name="wifi_priority_changed">Priority old value=<xliff:g id="old_value">%s</xliff:g>,new value=<xliff:g id="new_value">%s</xliff:g></string>
    <string name="wifi_priority_settings_label">Priority settings</string>
    <string name="wifi_configured_ap_list">Remembered access point list</string>
    <string name="confirm_title">Confirm</string>
    <string name="msg_wlan_signal_found">Found WLAN signal %s, would you like to use this WLAN network? Using this network will interrupt the data service partially.</string>
    <string name="msg_wlan_signal_found_manul">Found WLAN signal, would you like to use this WLAN network?</string>
    <string name="gemini_default_sim_auto">Auto</string>
    <string name="wifi_settings">Wi\u2011Fi</string>
    <string name="look_simstorage">View SIM Card Capacity</string>
	<string name="dlg_simstorage_content">phone number book Storage Capacity <xliff:g id="items">%d</xliff:g>, has been used <xliff:g id="items">%d</xliff:g>.</string>
	<string name="multichoice_contacts_limit">"Selected contacts can't be more than "<xliff:g id="count">%d</xliff:g></string>
	<string name="pref_camera_whitebalance_entry_auto">Auto</string>
    <string name="pref_camera_whitebalance_entry_incandescent">Incandescent</string>
    <string name="pref_camera_whitebalance_entry_daylight">Daylight</string>
    <string name="pref_camera_whitebalance_entry_fluorescent">Fluorescent</string>
    <string name="pref_camera_whitebalance_entry_cloudy">Cloudy</string>
    <string name="pref_camera_whitebalance_entry_twilight">Twilight</string>
    <string name="pref_camera_whitebalance_entry_shade">Shade</string>
    <string name="pref_camera_whitebalance_entry_warm_fluorescent">Warm fluorescent</string>
    <string name="pref_camera_whitebalance_entry_tungsten">Tungsten</string>
    <string name="pref_camera_scene_entryvalue_normal" translatable="false">normal</string>
    <string name="pref_camera_scene_entry_normal">Normal</string>
    <string name="accessibility_no_phone">No phone.</string>
    <string name="accessibility_phone_one_bar">Phone one bar.</string>
    <string name="accessibility_phone_two_bars">Phone two bars.</string>
    <string name="accessibility_phone_three_bars">Phone three bars.</string>
    <string name="accessibility_phone_four_bars">Phone four bars.</string>
    <string name="accessibility_phone_signal_full">Phone signal full.</string>
    <string name="add_file">Add file</string>
    <string name="non_audio_file">Failed to add, selected is not an audio file.</string>
    <string name="SD_ready_title">SD card ready</string>
    <string name="default_storage_path_change_msg">Do you want to change the default write disk?</string>
    <string name="call_video_call">Video call</string>
    <string name="vt_start_time_from">Start</string>
    <string name="change_data_conn_title">Change data connection</string>
    <string name="change_data_conn_message">" is not availible now, change the default data connection to "</string>
    <string name="change_data_conn_progress_message">"Please wait..."</string>
    <string name="privacy_settings">Reset</string>
    <string name="configed_access_points">Credible access points</string>
    <string name="new_access_points">Unknown access points</string>
    <string translatable="false" name="menu_select_all">"Select all"</string>
    <string translatable="false" name="menu_select_none">"Deselect all"</string>
    <string name="call_reject_title">Call Rejection</string>
    <string name="call_reject_sum">Manage auto-rejection mode and list</string>
    <string name="voice_call_reject_mode_title">Voice call auto reject mode</string>
    <string name="voice_call_all_numbers">Voice call auto reject mode: All numbers</string>
    <string name="video_call_all_numbers">Video call auto reject mode: All numbers</string>
    <string name="reject_list_full">Reject list is full.</string>
    <string-array name="call_reject_mode_entries">
        <item>Off</item>
        <item>All numbers</item>
        <item>Auto reject list</item>
    </string-array>
    <string-array name="call_reject_mode_values">
        <item>"0"</item>
        <item>"1"</item>
        <item>"2"</item>
    </string-array>
    <string name="voice_call_reject_list_title">Voice call auto reject list</string>
    <string name="voice_call_reject_list_sum">Manage voice call auto reject list</string>
    <string name="video_call_reject_mode_title">Video call auto reject mode</string>
    <string name="video_call_reject_list_title">Video call auto reject list</string>
    <string name="video_call_reject_list_sum">Manage video call auto reject list</string>
    <string name="call_reject_list_delete">DELETE</string>
    <string name="call_reject_list_add">ADD</string>
    <string name="add_call_reject_number">Add auto reject number</string>
    <string name="select_from">Select from</string>
    <string name="select_all">Select all</string>
    <string name="select_clear">Clear selected</string>
    <string name="select_trash">Trash</string>
    <string name="selected_item_count"><xliff:g id="count">%d</xliff:g> selected</string>
    <string-array name="call_reject_dialog_array">
        <item>Contacts</item>
        <item>Call logs</item>
    </string-array>
    <string name="call_reject_please_wait">Please wait\u2026</string>
    <string name="call_reject_no_name">No name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="cmcc_dm_settings_title">Device Management Permission</string>
    <string name="cmcc_dm_settings_enable_summary">Enable auto boot</string>
    <string name="cmcc_dm_settings_disable_summary">Disable auto boot</string>
    <string name="gps_settings_title">GPS settings</string>
    <string name="location_settings_title">Location access</string>
    <string name="location_network_based">Wi\u2011Fi &amp; mobile network location</string>
    <string name="location_neighborhood_level">Let apps use Google\'s location service to estimate your location faster. Anonymous location data will be collected and sent to Google.</string>
    <string name="location_gps">GPS satellites</string>
    <string name="agps_disable_on_reboot">Disable after Reboot</string>
    <string name="agps_disable_on_reboot_summary">Disable A-GPS capability after reboot</string>
    <string name="Network_Initiate">Network Request</string>
    <string name="Network_Initiate_Summary_on">Allow network to request position</string>
    <string name="Network_Initiate_Summary_off">Deny network to request position</string>
    <string name="Network_Used">Network Used</string>
    <string name="agps_profile_select">Profile Selector</string>
    <string name="agps_profile_SLP_address_editbox_title">SLP Address</string>
    <string name="port_title">SLP Port</string>
    <string name="tls_title">TLS</string>
    <string name="tls_summary_off">TLS is turned off</string>
    <string name="tls_summary_on">TLS is turned on</string>
    <string name="MobileNetwork_Category">Mobile Network</string>
    <string name="AgpsHelp_Category">Help</string>
    <string name="about_agps_title">About A-GPS</string>
</resources>